[package]
name = "relay"
version = "0.1.0"
edition = "2021"
authors = ["Wireskip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
config = { version = "0.13", features = ["json5"] }
semver = { version = "1", features = ["serde"] }
env_logger = "0.10.0"
http = "0.2.9"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
json5 = "0.4.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full", "tracing"] }
url = "2.4.1"
tokio-util = { version = "0.7.9", features = ["io", "compat"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
clap = { version = "4.4.6", features = ["derive"] }
