[package]
name = "wireskip"
version = "0.1.0"
edition = "2021"
authors = ["Wireskip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
hyper = { version = "1", features = ["full"] }
log = "0.4"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "http2"] }
clap = { version = "4.4", features = ["derive"] }
